fixed lm note alignment and spacing

--- a/packages/ilios-common/app/styles/ilios-common/components/week-glance/learning-materials.scss
+++ b/packages/ilios-common/app/styles/ilios-common/components/week-glance/learning-materials.scss
@@ -23,7 +23,7 @@
     }
 
     .public-notes {
-      padding-left: 2em;
+      padding-left: 0.3em;
     }
 
     .timed-release-info {
@@ -31,6 +31,7 @@
     }
 
     .week-glance-learning-material-list-item {
+      align-items: center;
       display: flex;
 
       &.fa-download {
